# coffeecutie-imgui

./: .build.yml  .gitignore  .gitmodules  .jenkins.groovy  .travis.yml  CMakeLists.txt  ENGINE_VERSION  FindCoffeeImGui.cmake  README.md  appveyor.yml  azure-pipelines.yml  build.groovy  build.yml  buildinfo.py  configure_ci.py  quick-build.sh  rebuild.py
.github/workflows/: 10-compile.yml
ci/: Makefile.multi  Makefile.standalone  appveyor-build.ps1  appveyor-deploy.ps1  github_api.py  travis-build.sh  travis-deps.sh
cmake/Find/: FindCoffee.cmake  FindSDL2.cmake  FindStandardLibs.cmake
cmake/Modules/: BuildFlags.cmake  BuildFunctions.cmake  BuildOptions.cmake
cmake/Packaging/: WindowsImageBuild.cmake
cmake/Preload/: windows-uwp.cmake
cmake/Templates/: JenkinsTemplate.groovy
cmake/Toolchains/: all-android.toolchain.cmake  all-ios.toolchain.cmake  linux-maemo-armv7_linux.toolchain.cmake
examples/basic/: CMakeLists.txt  main.cpp
include/coffee/imgui/: graphics_widgets.h  imgui_binding.h
src/: imgui_binding.cpp  main.cpp
src/imgui/: CMakeLists.txt  imgui_binding.cpp
src/include/coffee/imgui/: imgui_binding.h
toolchain/ci/: appveyor-build.ps1
toolchain/cmake/Modules/: BuildLibrary.cmake  GitDependencies.cmake  SubprojectFunctions.cmake
